En api.js creada la funcion reinicio y en index añadido un boton para el reinicio

--- a/DAM-vibe-front-main/index.html
+++ b/DAM-vibe-front-main/index.html
@@ -56,6 +56,10 @@
             </div>
         </div>
 
+        <div class="restart-container">
+            <button id="btn-restart" class="action-btn">Reiniciar juego</button>
+        </div>
+
         <!-- Panel de combate (oculto inicialmente) -->
         <div id="combat-panel" class="combat-panel hidden">
             <h2>¡Combate!</h2>
