Cambiado los puertos a 3337, echo que cuando se entra en combate se cambie el mapa por el combate

--- a/DAM-vibe-front-main/index.html
+++ b/DAM-vibe-front-main/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <!-- Panel de combate (oculto inicialmente) -->
-        <div id="combat-panel" class="combat-panel hidden">
+        <div id="combat-panel" class="combat-panel hidden" style="grid-column: 2; grid-row: 1;">
             <h2>¡Combate!</h2>
             <div class="enemy-info">
                 <h3 id="enemy-name">Enemigo</h3>
